force-app/main/default/objects/Order_Item__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Name</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>