force-app/main/default/objects/Order_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Order_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>